# Secure-File-Transfer-System

./: AESWrapper.cpp  AESWrapper.h  CMakeLists.txt  Client.cpp  Client.h  Client_scratch.cpp  FileHandler.cpp  FileHandler.h  Handler.cpp  Handler.h  Message.cpp  Message.h  README.md  RSAWrapper.cpp  RSAWrapper.h  Server.py  SignUp.cpp  SignUp.h  best server.py  broken server  crc.cpp  crc.h  file handling.py  main.cpp  main.py  server.py  utils.py
